# Azure-Queue-Performance-Test

./: .gitignore  README.md  analyze.py  azuredeploy.json  create-resources.sh  env.template  get-credentials.sh  pyproject.toml  run.sh  send_messages.py
func/: host.json  requirements.txt
func/QueueTrigger/: __init__.py  function.json
